<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.MenuMultiPlayerDialog">
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            <EditText
                    android:id="@+id/playerOneNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_1_name"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:importantForAutofill="no"
            />
            <ImageView
                    style="@style/house_image"
                    android:id="@+id/playerOneImage"
                    android:src="@drawable/house_baratheon"
                    tools:ignore="ContentDescription"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            <EditText
                    android:id="@+id/playerTwoNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_2_name"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:importantForAutofill="no"
            />
            <ImageView
                    style="@style/house_image"
                    android:id="@+id/playerTwoImage"
                    android:src="@drawable/house_targaryen"
                    tools:ignore="ContentDescription"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/startMultiPlayerGameBtn"
                    android:text="@string/start_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>